--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 .bundle/
 log/*.log
 pkg/
+spec/dummy/db/*.sqlite3
+spec/dummy/db/*.sqlite3-journal
+spec/dummy/log/*.log
+spec/dummy/tmp/
 vendor/bundle/
 Gemfile.lock
